# CS202-A-Road-Crossing-Game

./: .clang-format  .gitignore  CMakeLists.txt  FireLane.drawio  README.md  RULES.md  main.cpp
Core/: WindowScreen.cpp
src/: Application.h  Config.h
src/Api/CreateObstacles/: CreateObstacles.cpp
src/Class/: Character.cpp  Character.h  Core.cpp  Core.h  Enemy.cpp  Enemy.h  FireLane.cpp  FireLane.h  Lane.cpp  Lane.h  Map.cpp  Map.h  Obstacle.cpp  Obstacle.h  RoadLane.cpp  RoadLane.h  SafeLane.cpp  SafeLane.h
src/ColorPalettes/: AppColorPalette.h
src/ListOfEnemies/: Stoppable1.cpp  Stoppable1.h  Stoppable2.cpp  Stoppable2.h  Stoppable3.cpp  Stoppable3.h  Stoppable4.cpp  Stoppable4.h  Stoppable5.cpp  Stoppable5.h  Unstoppable1.cpp  Unstoppable1.h  Unstoppable2.cpp  Unstoppable2.h  Unstoppable3.cpp  Unstoppable3.h  Unstoppable4.cpp  Unstoppable4.h  Unstoppable5.cpp  Unstoppable5.h
src/States/: HomeState.cpp  HomeState.h  StateIdentifiers.h
src/gui/: Animation.cpp  Animation.h  Application.cpp  Application.h  BaseParameter.h  StateStack.cpp  StateStack.h
src/gui/GUIComponents/: Button.cpp  GUITexture.cpp  GUITexture.h
src/gui/ResourceHolders/: FontHolder.cpp  FontHolder.h  MusicPlayer.cpp  MusicPlayer.h  ResourceIdentifiers.h  TextureHolder.cpp  TextureHolder.h
src/gui/States/: CountdownState.cpp  CountdownState.h  CreditsState.cpp  CreditsState.h  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HomeState.cpp  HomeState.h  PauseState.cpp  PauseState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  StateIdentifiers.h
